data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4620.wast
;; 9. **Test Description**: Construct a `br_table` test case where index computations are dynamically produced and ensure they stay within valid ranges but stress the boundary conditions. This ensures correct handling of dynamically generated indices.    - **Constraint**: Dynamically compute indices that are within and near the boundary limits.    - **Edge Case Relation**: Validates robustness in handling dynamically computed indices near boundaries.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 2 funcref)
    (func $boundary-check-indirect-call
      (local $index i32)
      (local.set $index (i32.const 1))
      (call_indirect (type 0) (i32.const 0) (local.get $index))
    )
  )
  "type mismatch"
)